<resources>
    <string name="app_name">Dictionary App by A.R.T</string>


    <string name="alliterationn">Alliteration:</string>
    <string name="example">Example:</string>
    <string name="peter_piper_picked_a_peck_of_pickled_peppers">\'Peter Piper picked a peck of pickled peppers.\'</string>
    <string name="peter_piper_picked_a_peck_of_pickled_pepperss">Peter Piper picked a peck of pickled peppers.</string>
    <string name="is_a_term_to_describe_a_literary_device_in_which_a_series_of_words_begin_with_the_same_consonant_sound">is a term to describe a literary device in which a series of words begin with the same consonant sound.</string>
    <string name="ambigious">Ambigious:</string>
    <string name="is_a_word_phrase_or_statement_which_contains_more_than_one_meaning">is a word, phrase, or statement which contains more than one meaning.</string>
    <string name="john_took_off_his_trousers_by_the_bank_it_is_funny_if_we_confuse_one_meaning_of_bank_which_is_a_building_to_another_meaning_which_is_an_edge_of_a_river">John took off his trousers by the bank.” It is funny if we confuse one meaning of “bank,” which is a building, to another meaning, which is “an edge of a river.</string>
    <string name="john_took_off_his_trousers_by_the_bank_it_is_funny_if_we_confuse_one_meaning_of_bank_which_is_a_building_to_another_meaning_which_is_an_edge_of_a_riverr">John took off his trousers by the bank. It is funny if we confuse one meaning of “bank”, which is a building, to another meaning, which is - an edge of a river.</string>
    <string name="benevolent">Benevolent:</string>
    <string name="kind_and_helpful">kind and helpful</string>
    <string name="be">He was a benevolent old man and wouldn\'t hurt a fly.</string>
    <string name="bypass">Bypass:</string>
    <string name="to_avoid_something_by_going_around_it">to avoid something by going around it</string>
    <string name="we_took_the_road_that_bypasses_the_town">We took the road that bypasses the town.</string>
    <string name="capricious">Capricious:</string>
    <string name="changing_mood_or_behaviour_suddenly_and_unexpectedly">changing mood or behaviour suddenly and unexpectedly.</string>
    <string name="he_was_a_cruel_and_capricious_tyrant">He was a cruel and capricious tyrant.</string>
    <string name="disposition">Disposition:</string>
    <string name="the_particular_type_of_character_that_a_person_naturally_has">the particular type of character that a person naturally has</string>
    <string name="she_is_of_a_nervous_cheerful_sunny_disposition">She is of a nervous/ cheerful/ sunny disposition.</string>
    <string name="empathy">Empathy:</string>
    <string name="the_ability_to_share_someone_else_s_feelings_or_experiences_by_imagining_what_it_would_be_like_to_be_in_that_person_s_situation">the ability to share someone else\'s feelings or experiences by imagining what it would be like to be in that person\'s situation</string>
    <string name="lower_levels_of_empathy_may_contribute_to_conflict_in_social_interactions_and_thereby_heighten_levels_of_negative_emotions_experienced_by_some_children">Lower levels of empathy may contribute to conflict in social interactions and thereby heighten levels of negative emotions experienced by some children.</string>
    <string name="fervent">Fervent:</string>
    <string name="used_to_describe_beliefs_that_are_strongly_and_sincerely_felt_or_people_who_have_strong_and_sincere_beliefs">used to describe beliefs that are strongly and sincerely felt or people who have strong and sincere beliefs</string>
    <string name="it_is_his_fervent_hope_that_a_peaceful_solution_will_soon_be_found">It is his fervent hope that a peaceful solution will soon be found.</string>
    <string name="gallivant">Gallivant:</string>
    <string name="to_visit_or_go_to_a_lot_of_different_places_enjoying_yourself_and_not_worrying_about_other_things_you_should_be_doing">to visit or go to a lot of different places, enjoying yourself and not worrying about other things you should be doing</string>
    <string name="i_don_t_go_gallivanting_around_like_this_every_night">I don’t go gallivanting around like this every night.</string>
    <string name="hypnosis">Hypnosis:</string>
    <string name="a_mental_state_like_sleep_in_which_a_person_s_thoughts_can_be_easily_influenced_by_someone_else">a mental state like sleep, in which a person\'s thoughts can be easily influenced by someone else.</string>
    <string name="under_deep_hypnosis_she_remembered_the_traumatic_events_of_that_night">Under deep hypnosis, she remembered the traumatic events of that night.</string>
    <string name="irony">Irony:</string>
    <string name="something_that_has_a_different_or_opposite_result_from_what_is_expected">something that has a different or opposite result from what is expected.</string>
    <string name="the_irony_is_that_his_mistake_will_actually_improve_the_team_s_situation">The irony is that his mistake will actually improve the team\'s situation.</string>
    <string name="jurisdiction">Jurisdiction:</string>
    <string name="the_authority_of_a_court_or_official_organization_to_make_decisions_and_judgments">the authority of a court or official organization to make decisions and judgments.</string>
    <string name="the_court_has_no_jurisdiction_in_over_cases_of_this_kind">The court has no jurisdiction in/over cases of this kind.</string>
    <string name="karma">Karma:</string>
    <string name="this_is_totally_karma_she_told_herself_angrily">This is totally karma, she told herself angrily.</string>
    <string name="the_effects_of_a_person_s_actions_that_determine_his_destiny">the effects of a person\'s actions that determine his destiny.</string>
    <string name="lucid">Lucid:</string>
    <string name="transparently_clear_easily_understandable">transparently clear; easily understandable.</string>
    <string name="she_gave_a_clear_and_lucid_account_of_her_plans_for_the_company_s_future">She gave a clear and lucid account of her plans for the company\'s future.</string>
    <string name="misanthrope">Misanthrope:</string>
    <string name="someone_who_dislikes_people_in_general">someone who dislikes people in general.</string>
    <string name="a_drunkard_and_misanthrope_he_nevertheless_vows_to_defend_the_earth_from_the_alien_invaders">A drunkard and misanthrope, he nevertheless vows to defend the earth from the alien invaders.</string>
    <string name="nostalgic">Nostalgic:</string>
    <string name="feeling_happy_and_also_slightly_sad_when_you_think_about_things_that_happened_in_the_past">feeling happy and also slightly sad when you think about things that happened in the past.</string>
    <string name="talking_about_our_old_family_holidays_has_made_me_feel_all_nostalgic">Talking about our old family holidays has made me feel all nostalgic.</string>
    <string name="optimistically">Optimistically:</string>
    <string name="in_a_way_that_shows_that_you_hope_or_believe_that_good_things_will_happen_in_the_future">in a way that shows that you hope or believe that good things will happen in the future.</string>
    <string name="he">He optimistically predicted success.</string>
    <string name="paradigm">Paradigm:</string>
    <string name="a_model_of_something_or_a_very_clear_and_typical_example_of_something">a model of something, or a very clear and typical example of something.</string>
    <string name="in_this_new_luxury_market_paradigm_a_great_number_of_people_can_buy_luxury_goods">In this new luxury market paradigm a great number of people can buy luxury goods.</string>
    <string name="quell">Quell:</string>
    <string name="to_stop_something_especially_by_using_force">to stop something, especially by using force.</string>
    <string name="police_in_riot_gear_were_called_in_to_quell_the_disturbances_unrest">Police in riot gear were called in to quell the disturbances/ unrest.</string>
    <string name="tangible">Tangible:</string>
    <string name="real_and_not_imaginary_able_to_be_shown_touched_or_experienced">real and not imaginary; able to be shown, touched, or experienced.</string>
    <string name="we_need_tangible_evidence_if_we_re_going_to_take_legal_action">We need tangible evidence if we\'re going to take legal action.</string>
</resources>
